# sandbox-misc

./: .gitattributes  .gitignore  README.md  venv_install.ps1
barnsley_fern/: barnsley_fern.html  barnsley_fern.js  barnsley_fern.r
barnsley_fern_py/: main.py
bifurcation_diagram/: main1.py
bigdata-dev-env/: .gitignore  README.md
bigdata-dev-env/ansible/: .enc  ansible.cfg  av  avd  ave  module1  module1.yml  module1_init  module1_init.yml  module1_inventory  requirements.txt  setup
bigdata-dev-env/hardware/: Vagrantfile
brainfuck/: 224.bf  README.md
cpp-lessons/lessons/: 4.00.c++  5.00.c++  5.02.c++  5.03.c++  5.04.c++  5.05.c++  5.06.c++  5.07.c++  5.08.1.c++  5.09.c++  5.12.c++  6.03.c++  6.10.c++  6.11.c++  6.12.c++  6.13.c++
cpp-lessons/lessons2/: 001.HelloWorld.cpp  002.Variables.cpp  005.Argument.cpp  009.FOR.cpp  014.VarsInit.cpp  015.char.cpp  016.Math.cpp  021.for.cpp  023.for_3.cpp
cpp/cpp17indetail/: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  build-clang.ps1  build-cmake.ps1  build-mingw.ps1
cpp/cpp17indetail/src/: CmakeLists.txt
cpp/cpp17indetail/src/0_quick_start/: CmakeLists.txt  map_demo.cpp  print_demo.cpp
cpp/cpp17indetail/src/1_fixes_and_deprecations/: CMakeLists.txt  direct_list_initialisation.cpp  for_loop_examples.cpp  for_range_loop_14_1.cpp  for_range_loop_17_1.cpp  for_range_loop_17_2.cpp  for_range_loop_17_3.cpp  silent_assert.cpp
cpp/cpp17indetail/src/2_langiage_clarification/: CMakeLists.txt  evaluation_order.cpp
cpp/cpp17indetail/src/2_language_clarification/: CMakeLists.txt  copy_elision.cpp  copy_elision_non_movable.cpp  evaluation_order.cpp  exceptions.cpp
cpp/cpp17indetail/src/3_general_features/: CMakeLists.txt  init_if_and_switch.cpp  inline_var.cpp  lambda_constexpr.cpp  nested_ns.cpp  structured_bindings.cpp  structured_bindings_custom.cpp
cpp/cpp17indetail/src/4_templates/: CMakeLists.txt  deduction.cpp
cpp/cpp17indetail/src/chapter1_features/: CmakeLists.txt  chapter1_features.cpp
cpp/cppTemplates/: CMakeLists.txt
cpp/cppTemplates/src/1_Functions/: CMakeLists.txt  main.cpp  max.hpp
cpp/lessons01/: 5.01.c++  5.08.2.c++  5.10.c++  5.11.c++  5.13.c++  6.01.c++  6.02.c++  6.04.c++  6.05.c++  6.06.c++  6.14.c++  6.15.c++  6.16.c++
cpp/lessons02/: 003.Function.cpp  003.Gallons2Liters.cpp  006.Parameter.cpp  007.Return.cpp  008.IF.cpp  010.CodeBlock.cpp  011.LocalVars.cpp  012.GlobalVars.cpp  013.DataTypes.cpp  017.LogicalOpers.cpp  018.type_conversion.cpp  019.magic.cpp  020.if_else_if.cpp  022.for_2.cpp
cs124_from_languages_to_information/: demo.sh  gradient_descents.ipynb  information_retrieval.ipynb  linear_regression.ipynb  logistic_regression.ipynb  makrov_1.ipynb  naive_bayes.ipynb  neural_1.ipynb  requirements.txt  srilm.sh  tokenization.ipynb  tokenization.sh  w2v.ipynb
cs124_from_languages_to_information/corpuses/: low-low-bpe.txt  sonnets.txt
dip/: 20210803.py  20210815.py  20210816.py
fluent-python/: .editorconfig  .gitignore  README.md  requirements.txt
fluent-python/0_Tools/: disasm.py  fibonacci_golden_ratio.py  show_methods.py
fluent-python/1_Prologue/: french_deck.py  srt-vs-repr.py  vector2d.py
fluent-python/2_DataStructures/: .gitignore  array-basic.py  array-pickle.py  array-sort.py  bisect.bisect.py  bisect.insort.py  default_encodings.py  deque_base.py  dict-basic.py  generator_expressions.py  hash-perf-test.py  hashes.py  index.py  index0.py  index_default.py  list.py  list_comprhensions.py  memview.py  num-sci.py  sets.py  str_key_dict.py  str_key_dict0.py  str_vs_bytes.py  tuples.py  unicode.py  unicode_database.py  unicode_porto.py  unicode_sorting.py  unicode_toolbox.py
fluent-python/3_FunctionsAsObjects/: bobobo.py  callable.py  clip.py  clip_anotations.py  clock_clocked.py  clock_clocked2.py  clock_decorator.py  clock_decorator2.py  clock_decorator_params.py  clock_factorial.py  clock_factorial2.py  clock_fibonacci.py  clock_fibonacci_lru.py  closures_base.py  decorators101.py  first-class-func.py  functional_programming_pack.py  functions_instrospection.py  htmlize.py  htmlize_dispatched.py  order_classes.py  order_functions.py  order_functions_best_decorated.py  order_functions_best_globals.py  order_functions_best_module.py  order_functions_best_simple.py  order_promos.py  order_promos_decorated.py  registration.py  (+2 more)
godot-2d-action-rpg/: .gitignore  godot-2d-action-rpg.csproj  godot-2d-action-rpg.sln  project.godot
iskrajs-sandbox/: 01.js  02.js  03.js  04.js  05.js  06.js  07.js  08.js  09.js  10.js  11.js  12.js  14.js  18.js  25.js  README.md  main-board-led1-blink.js
jupyter/: hello.ipynb  julia.ipynb  numpy_overview.ipynb  sine.ipynb
kubernetes-minikube-hello/: Dockerfile  README.md  build.ps1  clean-all.ps1  expose.ps1  run.ps1  server.js  unset-env.ps1  update.ps1  view-page.ps1
lean-tutorials/: README.md  leanpkg.toml
learn-haskell-for-a-great-good/: .gitignore  README.md  hs-learn.cabal
manim-playground/: cmd.txt  requirements.txt
memoization/: memoization.py
nasm/: .gitignore  001.asm  _compile.ps1
powershell/: branch-parser.ps1
pulumi-dotnet-01/: MyStack.cs  Pulumi.yaml  pulumi-templates.txt  script.txt
pulumi-fsharp-01/: Program.fs  Pulumi.yaml
pulumi-go-01/: Pulumi.yaml  go.mod  go.sum  main.go
py/: fs_benchmark.py
python-ray/: Vagrantfile  cluster-config.yaml  cluster-config2.yaml  cluster_aws.yaml  cluster_local_full.yaml  cluster_local_minimal.yaml  info.txt  requirements-all.txt  requirements.txt  test.py
ruby_screencasts_rs/: 01-basics.rb  02-args.rb  03-methods.rb  04-classes-1.rb
sieve_of_eratosthenes_py/: pring_prjmes.py
tdd-xp-samlples/: README.md
threejs-playgound-01/: .gitignore  demo.html  index.html  init.ps1  init.sh  model.html  model.js  run.py
vba/: WorkPlace v 1.1 - Oper1.xlsm  WorkPlace v 1.1 - Oper2.xlsm  WorkPlace v 1.1 - Выбор папки для сохранения.xlsm  WorkPlace v.1.0 - Oper1.xlsm  WorkPlace v.1.0 - Oper2.xlsm  WorkPlace v.1.0 - Автосохранение в папку.xlsm
vbs/: helloWorld.vbs
web-development-bootcamp/: index-boilerplate.html
web-fx/: dizzy.html  dizzy.js
(+430 files in other folders)
